<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample Beacon Admin</string>
    <string name="range_beacons">Range Devices [iBeacon]</string>
    <string name="monitor_beacons">Monitor Devices [iBeacon]</string>
    <string name="range_eddystone">Range Devices [Eddystone]</string>
    <string name="monitor_eddystone">Monitor Devices [Eddystone]</string>
    <string name="action_settings">Settings</string>
    <string name="venue">Venue</string>
    <string name="cancel">Cancel</string>

    <!--Format strings-->
    <string name="format_connect">Connect %s</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="ok">Ok</string>
    <string name="proximity_uuid">Proximity UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="power_level">Power Level</string>
    <string name="advertising_interval">Advertising Interval</string>
    <string name="set_password">Set password</string>
    <string name="model_name">Model name</string>
    <string name="proximity">Proximity</string>
    <string name="transmission_power">Transmission Power</string>
    <string name="timers">Timers</string>
    <string name="access_control">Access Control</string>
    <string name="battery">Battery</string>
    <string name="battery_level">Battery Level</string>
    <string name="device_information">Device Information</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="firmware_revision">Firmware Revision</string>
    <string name="hardware_revision">Hardware Revision</string>
    <string name="reset">Reset</string>
    <string name="reset_device">Reset Device</string>
    <string name="restore_default_settings">Restore Default Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profiles">Profiles</string>
    <string name="accept_profile">Accept Profile</string>
    <string name="pending_configs">Pending configurations</string>
    <string name="apply_config">Apply Configuration</string>
    <string name="generate">Generate</string>
    <string name="beacon_unique_id">Beacon Unique Id</string>
    <string name="submit">Submit</string>
    <string name="device_name">Device Name</string>
    <string name="rssi">Rssi</string>
    <string name="power">Power</string>
    <string name="address">MAC address</string>
    <string name="firmware_version">Firmware version</string>
    <string name="unexpected_error_monitoring_start">Unexpected error occurred during monitoring start</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="unexpected_error_connection">Unexpected error occurred during establishing connection to Beacon Service</string>
    <string name="background_scan">Background Scan</string>
    <string name="scan_stopped">Scan stopped</string>
    <string name="scan_started">Scan started</string>
    <string name="region_entered">%1$s entered</string>
    <string name="region_abandoned">%1$s abandoned</string>
    <string name="beacon_appeared">%1$s appeared</string>
    <string name="appeared_beacon_info">Device found:\n%1$s\nProximityUUID:\n%2$s\nMajor:\n%3$d\nMinor:\n%4$d\nDistance:\n%5$.1f m (%6$s)</string>
    <string name="foreground_background_scan">Foreground/background scan</string>
    <string name="syncing_config">Syncing config…</string>
    <string name="response_status">HttpResponse status: %1$d</string>
    <string name="configuration">Configuration</string>
    <string name="simultaneous_scans">Simultaneous scan</string>
    <string name="create_manager">Create manager</string>
    <string name="count_of_managers">Count of managers: %1$d</string>
    <string name="distance">Distance &lt; </string>
    <string name="incorrect_distance">Distance is not a number</string>
    <string name="manager_id">Manager id: %1$d</string>
    <string name="beacons_found_count">Beacons found: %1$d</string>
    <string name="distance_filter">Distance &lt; %1$d</string>
    <string name="remove_manager">Remove manager</string>
    <string name="syncable_connection">Syncable connection</string>
    <string name="shuffled_beacons">Scanning shuffled beacons</string>

    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="disable_bluetooth">Disable bluetooth</string>
    <string name="namespace">Namespace: %1$s</string>
    <string name="instance">Instance: %1$s</string>
    <string name="url">Url: %1$s</string>
    <string name="temperature">Temperature: %1$f \u00b0C</string>
    <string name="battery_voltage">Battery voltage: %1$d mV</string>
    <string name="pdu_count">Pdu count: %1$d</string>
    <string name="time_since_power_up">Time since power up: %1$d seconds</string>
    <string name="telemetry_version">Telemetry version: %1$d</string>
    <string name="tx_power_level">Power: %1$d dBm</string>
    <string name="range_all_beacons">Range all types</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="permission_request_title">Permission needed</string>
    <string name="permission_request_message">For scan beacons permission Location is required. Without granting scan would not work</string>
    <string name="permission_rejected_message">Scanning beacons not possible</string>
    <string name="actions">Actions</string>
    <string name="cloud">Kontakt Cloud</string>
    <string name="unique_id_hint">Type device unique id</string>
    <string name="browser_actions">Browser actions</string>
    <string name="content_actions">Content actions</string>
    <string name="action_display">Popup will show after scanning beacon with associated action in Web Panel</string>
</resources>
