<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.kontakt.sample.ui.view.Header
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_title="Namespace"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/namespace_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="Namespace ID"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/instance_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="Instance ID"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="URL"/>

        <com.kontakt.sample.ui.view.Header
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_title="@string/transmission_power"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/power_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/power_level"/>

        <com.kontakt.sample.ui.view.Header
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_title="@string/access_control"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/set_password"/>

        <com.kontakt.sample.ui.view.Header
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_title="@string/battery"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/battery_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/battery_level"/>

        <com.kontakt.sample.ui.view.Header
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_title="@string/device_information"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/manufacturer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/manufacturer_name"/>


        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/firmware_revision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/firmware_revision"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/hardware_revision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/hardware_revision"/>

        <com.kontakt.sample.ui.view.Header
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_title="@string/reset"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/reset_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/reset_device"/>

        <com.kontakt.sample.ui.view.Entry
            android:id="@+id/default_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="@string/restore_default_settings"/>

    </LinearLayout>

</ScrollView>