<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/action_device_unique_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unique_id_hint" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/action_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/browser_actions" />

        <RadioButton
            android:id="@+id/action_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_actions" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_display" />

</LinearLayout>