<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"><include
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        layout="@layout/toolbar"/>
    
    <com.kontakt.sample.ui.KenBurnsNetImageView
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="280dp" />

    <Button
        android:alpha="0.7"
        android:id="@+id/range_beacons"
        android:text="@string/range_beacons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:alpha="0.7"
        android:id="@+id/monitor_beacons"
        android:text="@string/monitor_beacons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:alpha="0.7"
        android:id="@+id/background_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_background_scan"/>

</LinearLayout>